k8s/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudprofile-ingress
  namespace: cloudprofile

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: cloudprofile-backend
                port:
                  number: 5001

          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cloudprofile-frontend
                port:
                  number: 80
